# knn-xeonphi

./: .gitignore  FinalPresentationBullets.txt  FirstPresentationBullets.txt  README.md
code/: .ycm_extra_conf.py  CMakeLists.txt
code/apps/: KDTreeClassify.cc  SIFTClassify.cc  SIFTClassifyMPI.cc  TestFlann.cpp  TestTreeBuildParallel.cpp
code/include/flann/algorithms/: autotuned_index.h  kdtree_single_index.h  linear_index.h  nn_index.h
code/include/flann/util/: result_set.h
code/include/knn/: BinaryIO.h  BoundedHeap.h  Common.h  KDTree.h  Knn.h  KnnLinear.h  LoadBinary.h  Mpi.h  ParseArguments.h  Random.h  Timer.h
code/results/: build10k.txt  build1M.txt  euler.txt  parsebenchmark.py  search10k.txt  search1M.txt  xeonphi_benchmark.txt
code/results/report/: euler.txt  plot.py
code/results/scaling/: plot_build.gp  plot_build_speedup.gp  plot_search.gp  plot_search_speedup.gp
code/src/: BinaryIO.cc  LoadBinary.cc  ParseArguments.cpp
code/tests/: TestBinaryIO.cc  TestBoundedHeap.cc  TestFlann.cpp  TestLoadBinary.cc  TestTraversal.cc  TestTreeBuildParallel.cpp  TestVariance.cc
presentation/introductory_presentation/: current_state_milestones.key
presentation/keynote_themeTemplate/: keynote_theme.kth
presentation/xeonPhi_bench/: flops_master.out  plot.gp
report/: .gitignore  Makefile  bibl_conf.bib  report.aux  report.bbl  report.blg  report.out  report.tex
report/00_introduction/: introduction.tex
report/01_background/: background.tex
report/02_method/: method.tex
report/02_performance_models/: perf_models.tex
report/03_results/: results.tex
report/03_results/figs/: buildCompare.tex  buildSpeedup.tex  searchCompare.tex  searchSpeedup.tex
report/04_conclusion/: conclusion.tex
report/05_comments/: comments.tex
sequential/: compare.py  dummyReference_2.data  dummyTest.data  dummyTraining.data  reference_knn.py
sequential/fabian/knn/: CIFAR.h  CMakeLists.txt  Flower.h  Image_8bit.h  Test_KDTree.cpp  Test_KNN.cpp  Test_KNN_CIFAR.cpp  Test_KNN_SIFT.cpp
sequential/fabian/knn/include/: BPQ.h  CIFAR.h  Image_8bit.h  TestData.h  TexMex.h  myKDTree.h  myKNN.h
sequential/johannes/: CMakeLists.txt  KDTree.h  Knn.h  KnnNaive.h  TestKDTree.cc  TestKnn.cc
sequential/prabhu/: CMakeLists.txt  main.cpp
tbb_check/: .gitignore  Makefile  tbb_check.cpp
