cmake_minimum_required(VERSION 3.0)
project(Knn)

find_package(OpenMP)
include_directories({$CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -O3 -Wall -Wextra -Weffc++ ${OpenMP_CXX_FLAGS}")
add_executable(Test_KNN ${CMAKE_CURRENT_SOURCE_DIR}/Test_KNN.cpp)

set(KNN_SRC_PATHS)
foreach(SRC_FILE ${KNN_SRC})
  set(KNN_SRC_PATHS ${KNN_SRC_PATHS} ${CMAKE_CURRENT_SOURCE_DIR}/src/${SRC_FILE})
endforeach()
foreach(SRC_FILE ${KNN_APPS_SRC})
  set(KNN_EXEC_PATHS ${KNN_EXEC_PATHS} ${CMAKE_CURRENT_SOURCE_DIR}/apps/${SRC_FILE})
endforeach()
foreach(SRC_FILE ${KNN_TEST_SRC})
  set(KNN_EXEC_PATHS ${KNN_EXEC_PATHS} ${CMAKE_CURRENT_SOURCE_DIR}/tests/${SRC_FILE})
endforeach()

add_library(knn ${KNN_SRC_PATHS})
target_link_libraries(knn ${KNN_LIBS})
set(KNN_LIBS ${KNN_LIBS} knn)
foreach(EXEC_PATH ${KNN_EXEC_PATHS})
  get_filename_component(EXEC_FILE_NAME ${EXEC_PATH} NAME_WE)
  add_executable(${EXEC_FILE_NAME} ${EXEC_PATH})
  target_link_libraries(${EXEC_FILE_NAME} knn)
endforeach()
